fix: used scale instead of overflow to prevent horizontal scrollbar appear on proposal section, added srcset for section image

--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -3,7 +3,6 @@
 }
 
 .proposal-wrapper {
-    overflow: hidden;
     background-image: var(--green_linear);
     padding: 40px 20px;
     border-radius: 16px;
@@ -95,6 +94,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    scale: 0.94;
     border-radius: inherit;
 }
 
@@ -113,7 +113,6 @@
 
 @media screen and (min-width: 768px) {
     .proposal-wrapper {
-        overflow: visible;
         padding: 64px 18px;
     }
 
@@ -164,6 +163,10 @@
         top: 174px;
         right: -49px;
     }
+
+    .leave-application-backcard {
+        scale: 1;
+    }
 }
 
 @media screen and (min-width: 1280px) {
@@ -196,8 +199,6 @@
     }
 
     #backcard-1 {
-        background-color: rgba(255, 255, 255, 0.5);
-        z-index: -1;
         transform: rotate(11deg);
         height: 85%;
         top: 30px;
@@ -205,8 +206,6 @@
 
     #backcard-2 {
         left: 7px;
-        background-color: var(--light-green);
-        z-index: -2;
         transform: rotate(-8deg);
         height: 98%;
     }
